--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>홈페이지</title>
+    <title>안녕하세요</title>
   </head>
   <body>
-    <h2>환영합니다!</h2>
-    <p>김동현의 홈페이지에 오신 걸 환영합니다!</p>
+    <h2>안녕하세요,<%=name%>님!</h2>
   </body>
 </html>
